--- a/index.html
+++ b/index.html
@@ -174,11 +174,49 @@
             <button class="cta project-button" type="button" id="all-pro-view"> All</button>
         </div>
 
-        <div class="swe-projects all-projects">
 
+        <!-- all projects -->
+
+        <div class="all-pros all-projects">
             <div class="project-item">
                 <div class="project-info">
                     <a href="https://github.com/hardik-kapadia/stonks">
+                        <h1>Stonks</h1>
+                    </a>
+                    <h2>Stock Market Prediction using Social Media Sentiment</h2>
+                    <p>
+                        This Web-app was developed as a part of a Hackathon with a team
+                        of four people. We used Python, Django, Twitter APIs, and
+                        Natural Language Processing along with a few minor Python
+                        modules to create a web-app which would identify tweets
+                        regarding a certain stock and based on the tweets predict the
+                        future price of the stock.
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/project-1.png" alt="img"/>
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/ReImagine-App">
+                        <h1>ReImagine</h1>
+                    </a>
+                    <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
+                        reddit</h2>
+                    <p>
+                        A Cross-platform app built on flutter to browse through and save various posts from the
+                        groupd of subreddits called Imaginary Network Expanded (INE) on reddit. Built on dart using
+                        flutter for the front-end, and sqlite as the primary Database.
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/project-2.png" alt="img"/>
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/stock-portfolio-management">
                         <h1>Stock Market Portfolio Management App Backend</h1>
                     </a>
                     <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
@@ -188,6 +226,124 @@
                         connection to any SQL Database, proper security and authentication with Spring Security and
                         real-time stock market prices with Alphavantage API.
                     </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/smpm.jpg" alt="img"/>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/unilink-backend">
+                        <h1>Uni-link</h1>
+                    </a>
+                    <h2>Unified solution for social media managers and small businesses</h2>
+                    <p>
+                        A multi-platform social media management application that enables users to manage their
+                        social media profiles accross multiple social platforms from a single unified app. Allowed
+                        users to post, view statistics, and curate their content curation strategy using trained
+                        Convolutional and Recurrent neural networks embedded within the app.
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/uni-link-logo.png" alt="img"/>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/BookSMart.git">
+                        <h1>Book 'S' Mart</h1>
+                    </a>
+                    <h2>An Android App to exchange books</h2>
+                    <p>
+                        Book S Mart is a place where people can exchange used and
+                        newbooks of all types. Every year millions of books are sent to
+                        recycling as plainpaper although they can be used again. Our
+                        goal is to provide these books to those in need as well as Help
+                        the environment by reducing paper usage
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/booksmart-logo.jpg" alt="img"/>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/dicord-bot.git">
+                        <h1>Discord bot</h1>
+                    </a>
+                    <h2>A General Purpose discord bot</h2>
+                    <p>
+                        A General Purpose discord bot written in Python with
+                        functionalities of scraping images off the web, polls, and various miscellanious
+                        of discord-specific functionalities.
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/project-4.png" alt="img"/>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Social Students Stats</h1>
+                    <h2>Computing Sociability scores and homophily for social media users</h2>
+                    <p>
+                        Formulated and implemented a statistical model under a professor to mine and analyze the
+                        social media profiles and posts of over 5000 users. The model computes personalized
+                        sociability scores and quantifies the homophily between users. The model also utilized a
+                        Recurrent Neural Network trained on 20,000 tweets which identified troll tweets with 95%
+                        accuracy.
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/social-student-stats-logo.png" alt="img"/>
+                </div>
+            </div>
+
+            <div class="project-item">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/Insta-diagnosis">
+                        <h1>Insta-diagnosis</h1>
+                    </a>
+                    <h2>Predicting the probability of a user having a disease based off scans</h2>
+                    <p>
+                        Led a team in developing a secure web app using Django to predict whether or not a user has
+                        a
+                        certain disease based on MRI scans of respective uploaded by users. Pre-processed the images
+                        using OpenCV before passing them to the CNNs.
+
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="./img/doc-logo.jpg" alt="img"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="swe-projects all-projects">
+
+            <div class="project-item"
+                 data-tags="software, java, spring, spring-boot, mysql, sql, api, rest, finance, stocks">
+                <div class="project-info">
+                    <a href="https://github.com/hardik-kapadia/stonks">
+                        <h1>Stock Market Portfolio Management App</h1>
+                    </a>
+                    <h2>A Complete back-end for a Stock Market portfolio application</h2>
+                    <p>
+                        A stock portfolio management app that offers users real-time investment tracking through integrated
+                        Finance APIs. With robust data protection and authentication measures, users can safely monitor their
+                        portfolios, making informed decisions to maximize their gains.
+<!--                    A REST API which can be called upon by any front-end for a stock market portfolio management
+                        application. Developed in java using Spring boot, this is a complete package with an easy
+                        connection to any SQL Database, proper security and authentication with Spring Security and
+                        real-time stock market prices with Alphavantage API.                                           -->
+                    </p>
+                    <div class="project-item-tags">
+                        <span>Java</span> <span>Spring boot</span> <span>SQL</span> <span>Rest API</span>
+                    </div>
                 </div>
                 <div class="project-image">
                     <img src="./img/smpm.jpg" alt="img"/>
@@ -403,151 +559,6 @@
 
         </div>
 
-        <div class="all-pros all-projects">
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/stonks">
-                        <h1>Stonks</h1>
-                    </a>
-                    <h2>Stock Market Prediction using Social Media Sentiment</h2>
-                    <p>
-                        This Web-app was developed as a part of a Hackathon with a team
-                        of four people. We used Python, Django, Twitter APIs, and
-                        Natural Language Processing along with a few minor Python
-                        modules to create a web-app which would identify tweets
-                        regarding a certain stock and based on the tweets predict the
-                        future price of the stock.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/project-1.png" alt="img"/>
-                </div>
-            </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/ReImagine-App">
-                        <h1>ReImagine</h1>
-                    </a>
-                    <h2>A Cross-platform application to browse and save posts from the INE group of subreddits on
-                        reddit</h2>
-                    <p>
-                        A Cross-platform app built on flutter to browse through and save various posts from the
-                        groupd of subreddits called Imaginary Network Expanded (INE) on reddit. Built on dart using
-                        flutter for the front-end, and sqlite as the primary Database.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/project-2.png" alt="img"/>
-                </div>
-            </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/stock-portfolio-management">
-                        <h1>Stock Market Portfolio Management App Backend</h1>
-                    </a>
-                    <h2>A Complete back-end (as a REST API) for a Stock Market portfolio application</h2>
-                    <p>
-                        A REST API which can be consumed by any front-end for a stock market portfolio management
-                        application. Developed in java using Spring boot, this is a complete package with an easy
-                        connection to any SQL Database, proper security and authentication with Spring Security and
-                        real-time stock market prices with Alphavantage API.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/smpm.jpg" alt="img"/>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/unilink-backend">
-                        <h1>Uni-link</h1>
-                    </a>
-                    <h2>Unified solution for social media managers and small businesses</h2>
-                    <p>
-                        A multi-platform social media management application that enables users to manage their
-                        social media profiles accross multiple social platforms from a single unified app. Allowed
-                        users to post, view statistics, and curate their content curation strategy using trained
-                        Convolutional and Recurrent neural networks embedded within the app.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/uni-link-logo.png" alt="img"/>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/BookSMart.git">
-                        <h1>Book 'S' Mart</h1>
-                    </a>
-                    <h2>An Android App to exchange books</h2>
-                    <p>
-                        Book S Mart is a place where people can exchange used and
-                        newbooks of all types. Every year millions of books are sent to
-                        recycling as plainpaper although they can be used again. Our
-                        goal is to provide these books to those in need as well as Help
-                        the environment by reducing paper usage
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/booksmart-logo.jpg" alt="img"/>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/dicord-bot.git">
-                        <h1>Discord bot</h1>
-                    </a>
-                    <h2>A General Purpose discord bot</h2>
-                    <p>
-                        A General Purpose discord bot written in Python with
-                        functionalities of scraping images off the web, polls, and various miscellanious
-                        of discord-specific functionalities.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/project-4.png" alt="img"/>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Social Students Stats</h1>
-                    <h2>Computing Sociability scores and homophily for social media users</h2>
-                    <p>
-                        Formulated and implemented a statistical model under a professor to mine and analyze the
-                        social media profiles and posts of over 5000 users. The model computes personalized
-                        sociability scores and quantifies the homophily between users. The model also utilized a
-                        Recurrent Neural Network trained on 20,000 tweets which identified troll tweets with 95%
-                        accuracy.
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/social-student-stats-logo.png" alt="img"/>
-                </div>
-            </div>
-
-            <div class="project-item">
-                <div class="project-info">
-                    <a href="https://github.com/hardik-kapadia/Insta-diagnosis">
-                        <h1>Insta-diagnosis</h1>
-                    </a>
-                    <h2>Predicting the probability of a user having a disease based off scans</h2>
-                    <p>
-                        Led a team in developing a secure web app using Django to predict whether or not a user has
-                        a
-                        certain disease based on MRI scans of respective uploaded by users. Pre-processed the images
-                        using OpenCV before passing them to the CNNs.
-
-                    </p>
-                </div>
-                <div class="project-image">
-                    <img src="./img/doc-logo.jpg" alt="img"/>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
 <!-- End of Projects Section -->
