made projects more robust

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Hardik Kapadia's Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./img/person.png" />
+    <link rel="icon" href=".assets/img/person.png" />
 
     <title>Hardik Kapadia</title>
 </head>
@@ -46,8 +46,8 @@
     <!-- Hero Section -->
 
     <section id="hero">
-        <video id="background-video" autoplay loop muted poster="./img/video/bg-poster.jpg">
-            <source src="./img/video/bg.mp4" type="video/mp4">
+        <video id="background-video" autoplay loop muted poster="./assets/img/video/bg-poster.jpg">
+            <source src="./assets/img/video/bg.mp4" type="video/mp4">
         </video>
         <div class="hero container">
             <div>
@@ -59,18 +59,18 @@
                 <div class="hero-contact-icons">
                     <div class="hero-contact-item">
                         <a href="https://github.com/hardik-kapadia">
-                            <img width="96" height="96" src="./img/social/icons8-github-96.png" />
+                            <img width="96" height="96" src="./assets/img/social/icons8-github-96.png" />
                             <!-- <img width="96" height="96" src="https://img.icons8.com/nolan/96/github.png" /> -->
                         </a>
                     </div>
                     <div class="hero-contact-item">
                         <a href="https://www.linkedin.com/in/hardik-kapadia/">
-                            <img width="96" height="96" src="./img/social/icons8-linkedin-100.png" />
+                            <img width="96" height="96" src="./assets/img/social/icons8-linkedin-100.png" />
                         </a>
                     </div>
                     <div class="hero-contact-item">
                         <a href="mailto:hardik.kapadia63@gmail.com">
-                            <img width="100" height="100" src="./img/social/icons8-post-100.png"
+                            <img width="100" height="100" src="./assets/img/social/icons8-post-100.png"
                                 alt="message-squared" />
                         </a>
                     </div>
@@ -90,67 +90,67 @@
             <div class="service-bottom">
 
                 <div class="skill-item">
-                    <img src="./img/logo/java-logo.png" alt="">
+                    <img src="./assets/img/logo/java-logo.png" alt="">
                     <h3> Java </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/python-logo.png" alt="">
+                    <img src="./assets/img/logo/python-logo.png" alt="">
                     <h3> Python </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/c-logo.png" alt="">
+                    <img src="./assets/img/logo/c-logo.png" alt="">
                     <h3> C </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/cpp-logo.png" alt="">
+                    <img src="./assets/img/logo/cpp-logo.png" alt="">
                     <h3> C++ </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/spring-logo.png" alt="">
+                    <img src="./assets/img/logo/spring-logo.png" alt="">
                     <h3> Spring </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/dj-logo.png" alt="">
+                    <img src="./assets/img/logo/dj-logo.png" alt="">
                     <h3> Django </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/maven-logo.png" alt="">
+                    <img src="./assets/img/logo/maven-logo.png" alt="">
                     <h3> Maven </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/tomcat-logo.png" alt="">
+                    <img src="./assets/img/logo/tomcat-logo.png" alt="">
                     <h3> Tomcat </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/android-logo.png" alt="">
+                    <img src="./assets/img/logo/android-logo.png" alt="">
                     <h3> Android App Dev </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/html-logo.png" alt="">
+                    <img src="./assets/img/logo/html-logo.png" alt="">
                     <h3> HTML </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/css-logo.png" alt="">
+                    <img src="./assets/img/logo/css-logo.png" alt="">
                     <h3> CSS </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/js-logo.svg" alt="">
+                    <img src="./assets/img/logo/js-logo.svg" alt="">
                     <h3> JavaScript </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/flutter-logo.png" alt="">
+                    <img src="./assets/img/logo/flutter-logo.png" alt="">
                     <h3> Flutter </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/github-logo.png" alt="">
+                    <img src="./assets/img/logo/github-logo.png" alt="">
                     <h3> Git </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/docker-logo.png" alt="">
+                    <img src="./assets/img/logo/docker-logo.png" alt="">
                     <h3> Docker </h3>
                 </div>
                 <div class="skill-item">
-                    <img src="./img/logo/mysql.png" alt="">
+                    <img src="./assets/img/logo/mysql.png" alt="">
                     <h3> MySQL </h3>
                 </div>
             </div>
@@ -168,15 +168,23 @@
             </div>
 
             <div class="project-buttons">
-                <button class="cta project-button" type="button" id="swe-pro-view"> SWE</button>
-                <button class="cta project-button" type="button" id="ml-pro-view"> ML</button>
-                <button class="cta project-button" type="button" id="mob-pro-view"> Mobile</button>
-                <button class="cta project-button" type="button" id="all-pro-view"> All</button>
+                <button class="cta project-button project-category-btn" data-val="swe" type="button" id="swe-pro-view">
+                    SWE</button>
+                <button class="cta project-button project-category-btn" data-val="ml" type="button" id="ml-pro-view">
+                    ML</button>
+                <button class="cta project-button project-category-btn" data-val="mobile" type="button"
+                    id="mob-pro-view"> Mobile</button>
+                <button class="cta project-button project-category-btn" data-val="all" type="button" id="all-pro-view">
+                    All</button>
             </div>
 
 
             <!-- all projects -->
 
+            <div class="all-projects" id="all-projects-container">
+
+            </div>
+            <!--
             <div class="all-pros all-projects">
                 <div class="project-item">
                     <div class="project-info">
@@ -555,6 +563,7 @@
                 </div>
 
             </div>
+            -->
 
         </div>
     </section>
