--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Hardik Kapadia's Portfolio Website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href=".assets/img/person.png" />
+    <link rel="icon" href="./assets/img/person.png" />
 
     <title>Hardik Kapadia</title>
 </head>
