--- a/index.html
+++ b/index.html
@@ -58,18 +58,17 @@
                 <a href="#about" class="cta"> Resume </a>
                 <div class="hero-contact-icons">
                     <div class="hero-contact-item">
-                        <a href="https://github.com/hardik-kapadia">
+                        <a title="GitHub" href="https://github.com/hardik-kapadia">
                             <img width="96" height="96" src="./assets/img/social/icons8-github-96.png" />
-                            <!-- <img width="96" height="96" src="https://img.icons8.com/nolan/96/github.png" /> -->
                         </a>
                     </div>
                     <div class="hero-contact-item">
-                        <a href="https://www.linkedin.com/in/hardik-kapadia/">
+                        <a title = "Linkedin" href="https://www.linkedin.com/in/hardik-kapadia/">
                             <img width="96" height="96" src="./assets/img/social/icons8-linkedin-100.png" />
                         </a>
                     </div>
                     <div class="hero-contact-item">
-                        <a href="mailto:hardik.kapadia63@gmail.com">
+                        <a title="Email" href="mailto:hardik.kapadia63@gmail.com">
                             <img width="100" height="100" src="./assets/img/social/icons8-post-100.png"
                                 alt="message-squared" />
                         </a>
